Funciones de conectar

--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
                     <p>Edad</p>
                 </div>
                 <div class="col-6">
-                    <p>Buscador</p>
+                    <h1 class="display-6 text-center">Buscar usuarios</h1>
+                    <form class="row p-3" name="Cargar" action="Cargar.php" method="post">
+                        <div class="col-8 d-flex justify-content-center">
+                            <input type="text" placeholder="Nombre del usuario" class="form-control" name="Nombre">
+                        </div>
+                        <div class="col-4 d-flex justify-content-center">
+                            <button type="submit" name="Enviar" value="Enviar" class="btn btn-primary">Enviar</button>
+                        </div>
+                    </form>
                 </div>
             </div>
             
