--- a/index.html
+++ b/index.html
@@ -12,38 +12,53 @@
 <body>
 
     <div class="row">
-        <h1 class="display-3 m-4 text-center">bienvenido ...</h1>
 
-        <div class="col-12 row m-5 d-flex justify-content-center">
-            <div class="col-2">
-                <img src="Programador.jpg" class="img-thumbnail" alt="Foto de perfil">
-            </div>
-            <div class="col-10 row">
-                <div class="col-4">
-                    <p>Nombre y apellido</p>
-                    <p>Fecha Nacimient</p>
-                    <p>Edad</p>
+        <div class="col-md-6">
+            <h1 class="display-2 text-center">Inicio</h1>
+            <form class="row g-3 p-5" name="Cargar" action="Cargar.php" method="post">
+                <div class="col-md-6">
+                    <label for="inputEmail4" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="inputEmail4" name="Email">
                 </div>
-                <div class="col-6">
-                    <h1 class="display-6 text-center">Buscar usuarios</h1>
-                    <form class="row p-3" name="Cargar" action="Cargar.php" method="post">
-                        <div class="col-9">
-                            <input type="text" placeholder="Nombre del usuario" class="form-control" name="Nombre">
-                        </div>
-                        <div class="col-3">
-                            <button type="submit" name="Enviar" value="Enviar" class="btn btn-primary">Enviar</button>
-                        </div>
-                    </form>
+                <div class="col-md-6">
+                    <label for="inputPassword4" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="inputPassword4" name="Password">
                 </div>
-            </div>
-            
+                <div class="col-12">
+                    <button type="submit" name="Enviar" value="Enviar" class="btn btn-primary">Enviar</button>
+                </div>
+            </form>
         </div>
-    </div>
 
-    <div class="row">
-
-        <div class="col-12 m-5 d-flex justify-content-center">
-            <p>Publicaciones</p>
+        <div class="col-md-6">
+            <h1 class="display-2 text-center">Crear seccion</h1>
+            <form class="row g-3 p-5" name="Cargar" action="Cargar.php" method="post">
+                <div class="col-md-6">
+                    <label for="inputEmail4" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" name="Nombre">
+                </div>
+                <div class="col-md-6">
+                    <label for="inputPassword4" class="form-label">Apellido</label>
+                    <input type="text" class="form-control" name="Apellido">
+                </div>
+                <div class="col-md-12">
+                    <label class="col-5 col-form-label">Fecha de nacimiento</label>
+                    <div class="col-10">
+                      <input class="form-control" type="date" name="FechaNacimiento">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <label for="inputEmail4" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="inputEmail4" name="Email">
+                </div>
+                <div class="col-md-6">
+                    <label for="inputPassword4" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="inputPassword4" name="Password">
+                </div>
+                <div class="col-12">
+                    <button type="submit" name="Enviar" value="Enviar" class="btn btn-primary">Enviar</button>
+                </div>
+            </form>
         </div>
 
     </div>
