--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               </div>
             <div class="col-md-6">
                 <label class="form-label">Email</label>
-                <input type="email" class="form-control" placeholder="Email@email.com">
+                <input type="email" class="form-control" placeholder="Email@fabook.com">
             </div>
             <div class="col-md-6">
                 <label class="form-label">Contraseña</label>
