--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="btn-primary">
     <h1 class="text-center p-3 Fabook"><strong>FabooK</strong></h1>
     <div class="bg-light text-dark row rounded border border-dark mx-5 mb-5 px-3 pb-3">
-        <form class="row g-3">
+        <form class="row g-3" method="POST">
             <legend class="text-center mt-1">Inscripción</legend>
             <div class="col-md-6">
                 <label class="form-label">Nombre</label>
@@ -20,10 +20,17 @@
                 <label class="form-label">Apellido</label>
                 <input type="text" class="form-control" placeholder="Apellido">
             </div>
-            <div class="col-12">
+            <div class="col-6">
                 <label class="form-label">Fecha de nacimiento</label>
                 <input type="date" class="form-control">
-              </div>
+            </div>
+            <div class="col-6">
+                <label class="form-label">Sexo</label>
+                <select class="form-select">
+                    <option value="1">Hombre</option>
+                    <option value="2">Mujer</option>
+                </select>
+            </div>
             <div class="col-md-6">
                 <label class="form-label">Email</label>
                 <input type="email" class="form-control" placeholder="Email@fabook.com">
