--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <body class="btn-primary">
     <h1 class="text-center p-3 Fabook"><strong>FabooK</strong></h1>
     <div class="bg-light text-dark row rounded border border-dark mx-5 mb-5 px-3 pb-3">
-        <form class="row g-3" method="POST">
+        <form class="row g-3" method="POST" name="Inscripción">
             <legend class="text-center mt-1">Inscripción</legend>
             <div class="col-md-6">
                 <label class="form-label">Nombre</label>
-                <input type="text" class="form-control" placeholder="Nombre">
+                <input type="text" class="form-control" placeholder="Nombre" name="Nombre">
             </div>
             <div class="col-md-6">
                 <label class="form-label">Apellido</label>
-                <input type="text" class="form-control" placeholder="Apellido">
+                <input type="text" class="form-control" placeholder="Apellido" name="Apellido">
             </div>
             <div class="col-6">
                 <label class="form-label">Fecha de nacimiento</label>
@@ -33,11 +33,11 @@
             </div>
             <div class="col-md-6">
                 <label class="form-label">Email</label>
-                <input type="email" class="form-control" placeholder="Email@fabook.com">
+                <input type="email" class="form-control" placeholder="Email@fabook.com" name="email">
             </div>
             <div class="col-md-6">
                 <label class="form-label">Contraseña</label>
-                <input type="password" class="form-control" placeholder="*******">
+                <input type="password" class="form-control" placeholder="*******" name="contrasena">
             </div>
             <div class="col-12">
                 <div class="form-check">
