--- a/html/Inicio.html
+++ b/html/Inicio.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FaboK</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 <body class="btn-primary">
     <h1 class="text-center p-3 Fabook"><strong>FabooK</strong></h1>  
     <div class="bg-light text-dark row rounded border border-dark mx-5 mb-5 px-3 pb-4">
-        <form class="row g-3" method="POST" name="Inicio" action="funciones.php">
+        <form class="row g-3" method="POST" name="Inicio" action="prueba.php">
             <legend class="text-center mt-1">Iniciar sesion</legend>
             <div class="col-md-4">
                 <input type="email" class="form-control" placeholder="Email@fabook.com" name="Email">
