--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
             </div>
             <div class="col-6">
                 <label class="form-label">Fecha de nacimiento</label>
-                <input type="date" class="form-control">
+                <input type="date" class="form-control" name="Fecha">
             </div>
             <div class="col-6">
                 <label class="form-label">Sexo</label>
