ultimos arreglos del dia

--- a/html/index.html
+++ b/html/index.html
@@ -33,11 +33,11 @@
             </div>
             <div class="col-md-6">
                 <label class="form-label">Email</label>
-                <input type="email" class="form-control" placeholder="Email@fabook.com" name="email">
+                <input type="email" class="form-control" placeholder="Email@fabook.com" name="Email">
             </div>
             <div class="col-md-6">
                 <label class="form-label">Contraseña</label>
-                <input type="password" class="form-control" placeholder="*******" name="contrasena">
+                <input type="password" class="form-control" placeholder="*******" name="Contrasena">
             </div>
             <div class="col-12">
                 <div class="form-check">
